// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniversalLink renders correctly with a mailto link 1`] = `
<DocumentFragment>
  <a
    class="emotion-0 emotion-1"
    href="mailto:test@test.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    This is a link
  </a>
</DocumentFragment>
`;

exports[`UniversalLink renders correctly with a target blank 1`] = `
<DocumentFragment>
  <a
    class="emotion-0 emotion-1"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    This is a link
  </a>
</DocumentFragment>
`;

exports[`UniversalLink renders correctly with a tel link 1`] = `
<DocumentFragment>
  <a
    class="emotion-0 emotion-1"
    href="tel:+33666666"
    rel="noopener noreferrer"
    target="_blank"
  >
    This is a link
  </a>
</DocumentFragment>
`;

exports[`UniversalLink renders correctly with an absolute utl 1`] = `
<DocumentFragment>
  <a
    class="emotion-0 emotion-1"
    href="https://google.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    This is a link
  </a>
</DocumentFragment>
`;

exports[`UniversalLink renders correctly with as Link 1`] = `
<DocumentFragment>
  <a
    class="emotion-0 emotion-1"
    href="/test-react-router-dom"
  >
    This is a link
  </a>
</DocumentFragment>
`;

exports[`UniversalLink renders correctly with as a 1`] = `
<DocumentFragment>
  <a
    class="emotion-0 emotion-1"
    href="https://react.ui.scaleway.com"
  >
    This is a link
  </a>
</DocumentFragment>
`;

exports[`UniversalLink renders correctly with defaults 1`] = `
<DocumentFragment>
  <a
    class="emotion-0 emotion-1"
  >
    This is a link
  </a>
</DocumentFragment>
`;

exports[`UniversalLink renders correctly with href 1`] = `
<DocumentFragment>
  <a
    class="emotion-0 emotion-1"
    href="/"
  >
    This is a link
  </a>
</DocumentFragment>
`;

exports[`UniversalLink renders correctly with modify Link on theme from react-router-dom 1`] = `
<DocumentFragment>
  <a
    class="emotion-0 emotion-1"
    href="/test-react-router-dom"
  >
    This is a link
  </a>
</DocumentFragment>
`;

exports[`UniversalLink renders correctly with to prop 1`] = `
<DocumentFragment>
  <a
    class="emotion-0 emotion-1"
    href="/"
  >
    This is a link
  </a>
</DocumentFragment>
`;
